Currently adding images and planning more content and planning format

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <body>
 
     <div class="container">
-      <h1>My personal web site.</h1>
+      <h1>My Bowling Experience</h1>
 
-      <p>Hello, world.</p>
+      <p>fun</p>
       
-
-   </div>
+      <img src="assets/Bowling.jpg" style="width: 400px;;">
+   
+    </div>
 
   </body>
 </html>
