--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
   <head>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -12,9 +12,16 @@
 
       <p>fun</p>
       
-      <img src="assets/Bowling.jpg" style="width: 400px;;">
-   
     </div>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  </head>
+  <body>
+
+    <div style="text-align:center">
+      <span class="dot"></span>
+      <div class="circular--portrait"> <img src="assets/Bowling.jpg" style="width: 555px;;"> 
+    </div>
   </body>
-</html>
+</html> 
