I created an animation for the title. I will be creating the text boxes and fill it with content next class :

--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 
     <div class="container">
       <h1>My Bowling Experience</h1>
-
-      <p>fun</p>
-      
+      <p>Julian Tang</p>
     </div>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   </head>
   <body>
-
-    <div style="text-align:center">
-      <span class="dot"></span>
+  
+      
       <div class="circular--portrait"> <img src="assets/Bowling.jpg" style="width: 555px;;"> 
     </div>
   </body>
+ 
+  <div class="buttons">
+    <button class="slide">Scores</button>
+    <div style="text-align:center">
+  </div>
+
 </html> 
+
