I finished the general layout that my website will look like. I will also change colors and add more content to my website.

--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body>
-
-    <div class="container">
-      <h1>My Bowling Experience</h1>
-      <p>Julian Tang</p>
-    </div>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  </head>
-  <body>
-  
-      
-      <div class="circular--portrait"> <img src="assets/Bowling.jpg" style="width: 555px;;"> 
-    </div>
-  </body>
- 
-  <div class="buttons">
-    <button class="slide">Scores</button>
-    <div style="text-align:center">
+  <div class="container">
+    <h1>My Bowling Experience</h1>
   </div>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <div class="circular--portrait"> <img src="assets/Bowling.jpg" style="width: 455px;;"> 
+  <body>
+    </div>
+      <h2>Why Bowling?</h2>
+        <div class="col-2"> 
+        <p>I started Bowling in the summer of 2022 as a way to spend time with friends. It quickly grew to become one of my favorite sports, and inspired me to get better. </p>
+    </div>
+    <div>
+      <h3>Breakthrough Moment</h3>
+        <div class="col-3">
+          <p>Learning what problems are present and how they can be solved is key in progression, which is why taking classes with an expert is essential. </p>
+          <p>The turning point in my Bowling experience that greatly helped with my improvement was the idea of staggering my slide and release to convert more momentum from the swing into the release.</p>
+        </div>
+    </div>
+    
+  </body>
 </html> 
 
